crates/ruff_python_parser/tests/snapshots/invalid_syntax@debug_shadow_match.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/debug_shadow_match.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            "_",
        ),
        range: 0..33,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        "_",
                    ),
                    range: 0..32,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                "_",
                            ),
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..32,
                            node_index: NodeIndex(
                                "_",
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 18..27,
                                    node_index: NodeIndex(
                                        "_",
                                    ),
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("__debug__"),
                                            range: 18..27,
                                            node_index: NodeIndex(
                                                "_",
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            "_",
                                        ),
                                        range: 29..32,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    "_",
                                                ),
                                                range: 29..32,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | match x:
2 |     case __debug__: ...
  |          ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
  |
